[package]
name = "leash"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "a restrictive shell for system operators"
homepage = "https://github.com/g1eng/leash"
repository = "https://github.com/g1eng/leash"
readme = "README.md"
documentation = "https://github.com/g1eng/leash"
keywords = ["shell"]
categories = ["command-line-utilities","shell"]

[dependencies]
ring = "0.16.20"
serde = "1.0.185"
serde_derive = "1.0.185"
toml = "0.7.6"
